<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/timg1">

    <TextView style="@style/ClockText"
        android:id="@+id/analogView"
        android:text="@string/hello_world"/>

    <AnalogClock
        android:id="@+id/analogClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/analogView"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/game1"
        />
    <Button
        android:id="@+id/simpleClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simpleClockLabel"
        android:layout_below="@+id/analogClock"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>
    <Button
        android:id="@+id/worldClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/worldClockLabel"
        android:layout_below="@+id/simpleClock"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/happyClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/happyClockLabel"
        android:layout_below="@+id/worldClock"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>

</RelativeLayout>