<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.analogclock.MainActivity"
    android:id="@+id/mainLayout">

    <!--<supports-screens android:requiresSmallestWidthDp="720"/>-->

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:padding="12dip"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"/>

    <AnalogClock
        android:id="@+id/analogClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView"
        android:background="#AACCFF"/>

    <Button
        android:id="@+id/clockGone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/analogClock"
        android:text="@string/clockGone"
        android:textSize="16sp"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/clockVisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/clockGone"
        android:text="@string/clockViz"
        android:textSize="16sp"
        android:textAllCaps="false" />
    <Button
        android:id="@+id/clockInVisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/clockVisible"
        android:text="@string/clockInViz"
        android:textSize="16sp"
        android:textAllCaps="false"/>

    </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
